# draft-queen

./: .env.example  .gitignore  CFR_403_SOLUTION.md  CFR_COMPLETION_SUMMARY.md  CFR_PLAYWRIGHT_IMPLEMENTATION.md  CFR_SOLUTION_SUMMARY.md  CLI_QA_VALIDATION_REPORT.txt  PFF_SCRAPER_QUICK_REF.md  PFF_SCRAPER_TESTS_SUMMARY.md  PFF_SCRAPER_TEST_GUIDE.md  POETRY_SETUP.md  README.md  US-044_PROGRESS_OVERVIEW.md  alembic.ini  config.py  debug_output.txt  debug_yahoo.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_pff_tests.py  seed_prospects.py  test_pff_scraper.py  test_playwright_logic.py  test_poc_with_real_data.py
backend/api/: analytics_service.py  ranking_service.py  routes.py  schemas.py
backend/database/: __init__.py  models.py
cli/: README.md  __init__.py  main.py
cli/commands/: admin.py  history.py  pipeline.py  prospects.py  quality.py
data_pipeline/models/: __init__.py  prospect_grades.py
data_pipeline/orchestration/: pff_pipeline_setup.py  pipeline_orchestrator.py  stage_connectors.py
data_pipeline/quality/: __init__.py
data_pipeline/reconciliation/: reconciliation_engine.py
data_pipeline/scrapers/: __init__.py  pff_scraper.py  pff_scraper_playwright.py  pff_scraper_poc.py  pff_scraper_selenium.py
data_pipeline/sources/: espn_injury_scraper.py  nfl_draft_connector.py  yahoo_sports_scraper.py
data_pipeline/validators/: pff_validator.py  prospect_matcher.py  stat_validator.py
docker/: .dockerignore  Dockerfile.api  Dockerfile.pipeline  init-db.sh
docs/: AGENT_INSTRUCTIONS_BACKEND.md  DATA_ENGINEER_SPRINT1_REVIEW.md  DATA_ENGINEER_VISUAL_SUMMARY.md  DEPLOYMENT.md  EMAIL_CONFIGURATION.md  ETL-001_COMPLETION.md  ETL-002_COMPLETION.md  ETL_E2E_TEST_GUIDE.md  GETTING_STARTED.md  PHASE5_FINAL_SUMMARY.md  PHASE_5_PROGRESS.md  PIPELINE_REFACTORING_COMPLETE.md  PROJECT_PIVOT_SUMMARY.md  README.md  REQUIREMENTS.md  RUNNING_LOCALLY.md  SCRAPER_UPDATE_PROPER_RENDERING.md  SPRINT1_QA_REPORT.md  SPRINT_3_COMPLETION.md  SPRINT_PLANS.md  SYSTEM_VERIFICATION.md  US-045_COMPLETION_REPORT.md  US-045_SUMMARY.md
docs/adr/: 0001-technology-stack.md  0004-caching-strategy.md  0005-authentication.md  0006-deployment.md  0007-monitoring.md  0008-export-formats.md  0009-data-sourcing.md  0010-pff-data-source.md  README.md  SPIKE-001-INDEX.md  (+3 more)
examples/: run_pff_scraper.py
frontend/: .gitignore  QUALITY_DASHBOARD_GUIDE.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: env.py
notebooks/: Prospect_Analysis.ipynb
qa_reports/: BUGS.md  E2E_TESTING_REPORT.md  QA_DETAILED_TEST_REPORT_US-040.txt  QA_REPORT_INDEX_US-040.md  QA_TEST_REPORT.md  QA_TEST_SUMMARY_US-040.md  QA_VALIDATION_US-040.md  SCRAPER_QA_REPORT.md  US-041_INTEGRATION_TEST_REPORT.md
scripts/: clean_database.py  generate_test_alerts.py  run_yahoo_scraper.py  start.sh  test_cfr_scraper_playwright.py  test_e2e_etl.py  test_e2e_quick.py  test_e2e_quick_simple.py  test_e2e_real_data.py  test_e2e_status_report.py
sprint-planning/: CFR_DELIVERABLES_INDEX.md  ETL-003_COMPLETION.md  ETL-004_LINEAGE_RECORDER_COMPLETION.md  ETL-007_CFR_TRANSFORMER_COMPLETION.md  ETL-008_DATA_QUALITY_VALIDATION_COMPLETION.md  ETL-009_ETL_ORCHESTRATOR_COMPLETION.md  SPRINT_1_USER_STORIES.md  SPRINT_2_USER_STORIES.md  SPRINT_3_USER_STORIES.md  SPRINT_4_USER_STORIES.md  SPRINT_PLANS.md  TECHNICAL_SPEC_CFR_INTEGRATION.md  US-041-CODEREVIEW.md  US-044_COMPLETE_STATUS.md  US-045-CODEREVIEW.md
src/: config.py
(+188 files in other folders)
