[tool.poetry]
name = "nfl-draft-queen"
version = "0.1.0"
description = "NFL Draft Analysis Internal Data Platform - Enterprise data analytics and pipeline automation"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "backend", from = "src" },
    { include = "data_pipeline", from = "src" },
    { include = "cli", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

# Core Framework
fastapi = "0.104.1"
uvicorn = "0.24.0"
python-dotenv = "1.0.0"

# Database
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"

# Data Validation & Processing
pydantic = "2.5.2"
pydantic-settings = "2.1.0"
pandas = "2.1.3"
numpy = "1.26.2"

# HTTP Client
requests = "2.31.0"
httpx = "0.25.2"
aiohttp = "^3.9.0"

# Task Scheduling
apscheduler = "3.10.4"

# Logging & Monitoring
python-json-logger = "2.0.7"

# Utilities
python-multipart = "0.0.6"
email-validator = "2.1.0"
beautifulsoup4 = "^4.14.3"
playwright = "^1.40.0"
rapidfuzz = "<3.0"

# CLI
click = "^8.1.7"
rich = "^13.7.0"
keyring = "^24.3.0"
pyyaml = "^6.0.1"
asyncpg = "^0.31.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-asyncio = "0.21.1"
pytest-mock = "3.12.0"

# Code Quality
black = "23.12.0"
flake8 = "6.1.0"
mypy = "1.7.1"
isort = "5.13.2"
pylint = "3.0.3"

# Documentation
sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"

[tool.poetry.scripts]
dq = "cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "apscheduler.*",
    "httpx_mock.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for components interacting",
    "slow: Tests that take a long time to run",
    "database: Tests that require database connection",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend", "data_pipeline"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false
